--- a/public/css/loginmain.css
+++ b/public/css/loginmain.css
@@ -186,10 +186,10 @@ iframe {
   align-items: center;
   padding: 15px;
   background: #0250c5;
-  background: -webkit-linear-gradient(bottom, #0250c5, #d43f8d);
-  background: -o-linear-gradient(bottom, #0250c5, #d43f8d);
-  background: -moz-linear-gradient(bottom, #0250c5, #d43f8d);
-  background: linear-gradient(bottom, #0250c5, #d43f8d);
+  background: -webkit-linear-gradient(bottom, #0250c5, #4e73df );
+  background: -o-linear-gradient(bottom, #0250c5, #4e73df );
+  background: -moz-linear-gradient(bottom, #0250c5, #4e73df );
+  background: linear-gradient(bottom, #0250c5, #4e73df );
   position: relative;
   z-index: 1;
 }
@@ -278,7 +278,7 @@ iframe {
   width: 100%;
   height: 100%;
   box-shadow: 0px 0px 0px 0px;
-  color: rgba(211,63,141, 0.6);
+  color: rgba(56, 47, 190, 0.6);
 }
 
 .input100:focus + .focus-input100 {
@@ -327,7 +327,7 @@ iframe {
 }
 
 .input100:focus + .focus-input100 + .symbol-input100 {
-  color: #d33f8d;
+  color: #3f66d3;
   padding-left: 18px;
 }
 
@@ -368,7 +368,7 @@ iframe {
   height: 18px;
   border-radius: 3px;
   background: #fff;
-  border: 2px solid #d33f8d;
+  border: 2px solid #3f66d3;
   left: 0;
   top: 48%;
   -webkit-transform: translateY(-50%);
@@ -379,7 +379,7 @@ iframe {
 }
 
 .input-checkbox100:checked + .label-checkbox100::before {
-  color: #d33f8d;
+  color: #4163d3;
 }
 
 
@@ -406,7 +406,7 @@ iframe {
   width: 100%;
   height: 62px;
   border-radius: 3px;
-  background: #d33f8d;
+  background: #3f62d3;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -477,7 +477,7 @@ iframe {
 
 .btn-face:hover,
 .btn-google:hover {
-  border-color: #d33f8d;
+  border-color: #3f4ed3;
 }
 
 
